百度知道首页静态v1.0

--- a/BaiDuZhiDao.html
+++ b/BaiDuZhiDao.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>百度知道</title>
-		<link rel="stylesheet" type="text/css" href="css/baiduzhidao.css"/>
+		<link rel="stylesheet" type="text/css" href="css/BaiDuZhiDao.css"/>
 	</head>
 	<body>
 		<header>
